# x_make_yahw_x

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  json_contracts.py  mypy.ini  projection.py  pyproject.toml  pyrightconfig.json  x_cls_make_yahw_x.py
.github/workflows/: ci.yml
docs/demo_export/: projection.dot
tests/: __init__.py  test_json_contracts.py  test_main_json.py  test_yahw.py
tests/fixtures/json_contracts/: error.json  input.json  output.json
